<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/accessibleSections"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sectionList"
        android:prompt="@string/selectSection" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/next"
        android:id="@+id/next" />

</LinearLayout>