<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    >

    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Login" />
    <EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/login" />

    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/Password" />
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:password="true" />

    <Button android:id="@+id/doLogin"
            android:text="@string/doLogin"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />

</LinearLayout>

